# TapCardKZ

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  docker-compose.yml  pyproject.toml  requirements.txt  servers.json
app/: lifespan.py  main.py
app/api/v1/: __init__.py  dependencies.py  router.py
app/api/v1/endpoints/: assets.py  cards.py  codes.py  socials.py
app/api/v1/endpoints/admin/: __init__.py  cards.py  codes.py
app/api/v1/endpoints/user/: __init__.py  assets.py  cards.py  codes.py  socials.py
app/app_state/: __init__.py  db.py  redis.py  s3.py  setup_db.py  setup_s3.py
app/core/: __init__.py  config.py  enums.py  logger.py  manager.py  redis.py
app/core/db/: session.py
app/core/models/: __init__.py  asset.py  card.py  code.py  settings.py  social.py
app/repo/: __init__.py  assets.py  avatars.py  cards.py  codes.py  logos.py  socials.py
app/s3/: __init__.py  client.py
app/schemas/: __init__.py  assets.py  cards.py  codes.py  socials.py
app/services/: __init__.py  assets.py  avatars.py  cards.py  codes.py  logos.py  socials.py
app/static/admin/: index.html
app/utils/: __init__.py  code.py  jwt.py  token.py  utils.py
app/validators/: __init__.py  assets.py  auth.py  cards.py  codes.py  socials.py
