[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tapcardkz"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary,pool]",
  "alembic",
  "pydantic>=2.0",
  "pydantic-settings",
  "python-dotenv",
  "aioboto3==13.2.0",
  "python-jose[cryptography]",
  "python-multipart",
]

[tool.setuptools]
packages = ["app"]
