[tool.poetry]
name = "taply"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = "^2.0"
psycopg = {extras = ["binary", "pool"], version = "*"}
alembic = "*"
pydantic = "^2.0"
pydantic-settings = "*"
python-dotenv = "*"
aioboto3 = "13.2.0"
python-jose = {extras = ["cryptography"], version = "*"}
python-multipart = "*"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
