[tool.poetry]
name = "taply"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2"}
alembic = "^1.13"
pydantic = "^2.0"
pydantic-settings = "^2.6"
python-dotenv = "^1.0"
aioboto3 = "^13.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}
python-multipart = "^0.0.12"
passlib = {extras = ["bcrypt"], version = "^1.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
